--- a/TailwindCSS/src/input.css
+++ b/TailwindCSS/src/input.css
@@ -3,11 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
 /* this is an import i got from google fonts, instead of the link i got the import instead */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 /* layer base is another customization option for you in tailwind, 
-you can customize your code here only if you cannot do it through tailwind classes or that it takes so many classes */
+you can customize your code here only if you cannot do it through tailwind classes or that it has so many classes */
 @layer base {
     html {
         font-family: 'Montserrat', sans-serif;
@@ -15,7 +16,7 @@ you can customize your code here only if you cannot do it through tailwind class
 
     /* this is an example of styling in your css file while still using tailwind css */
     .section-example {
-        @apply py-20 bg-purple-300 flex items-center justify-center;
+        @apply py-16 my-5 bg-purple-300 flex items-center justify-center;
         /* you can even combine normal css properties here BUT you cannot apply tailwind classes here, only with @apply*/
         position: relative;
         font-weight: 600;
